test/fixtures/errors/partial-literal.mustache
<!DOCTYPE html>
<html>
    <head>
        <title>Page with partial literal error</title>
    </head>
    <body>
        <h1>{{ title }}</h1>
        {{> partials/common/comment | title='Name }}
    </body>
</html>
